Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132414

embedding a widget window in qml does not draw the window

    XMLWordPrintable

Details

    • WebAssembly
    • 5c5844ced (dev), 887601bf0 (6.9)

    Description

      When using a modified version of

      qtdoc/examples/demos/windowembedding

      (main.cpp attached)

       

      This is the current output

       

      This is the expected output

       

      The problem is that QWasmScreen::allWIndows does not return allwindows,

      this causes the QWasmCompositor to be not enabled,

       

      main.cpp

      Attachments

        1. image-2024-12-21-10-26-46-368.png
          21 kB
          Even Oscar Andersen
        2. image-2024-12-21-10-27-09-113.png
          16 kB
          Even Oscar Andersen
        3. main.cpp
          9 kB
          Even Oscar Andersen
        For Gerrit Dashboard: QTBUG-132414
        # Subject Branch Project Status CR V

        Activity

          People

            evenandersen Even Oscar Andersen
            evenandersen Even Oscar Andersen
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes